Edited header of website, added a image, and css formating, and mobile compatibility

--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Professional Portfolio</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./assets/css/style.css"/>
-        <h1>Rachel Elizabeth Washington</h1>
-    </head>
-    <body>
-        <!-- Core Website Section -->
-        <main>
-            <aside>
-                <h3>Education</h3>
-                <h3>Skills</h3>
-                <h3>Volunteer Work</h3>
+<html lang="en-us">
 
-            </aside>
-            <section class="project1">
-            <h2>Project 1</h2>
-            </section>
-        </main>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Professional Portfolio</title>
+</head>
+
+<body>
+    <div class="header">
+        <div class="flexheader"><h1>Rachel Washington</h1></div>
+        <div>
+            <ul>
+                <li><a href="aboutme">About Me</a></li>
+                <li><a href="https://github.com/rwashi690">GitHub</a></li>
+                <li><a href="contactme">Contact Information</a></li>
+            </ul>
+
+        </div>
+        <div class="flexheader">
+            <img src="assets/images/IMG_2276.jpeg">
+        </div>
+
+    </div>
+
+    <div class="project">
+        <h2>Project 1</h2>
+    </div>
+    <div class="project">
+        <h2>Project 2</h2>
+    </div>
+    <div class="project">
+        <h2>Project 3</h2>
+    </div>
     
+</body>
+
 </html>
+
