Removed an extra class that was not in use

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="header">
-        <div class="flexheader"><h1>Rachel Washington</h1></div>
+        <div><h1>Rachel Washington</h1></div>
         <div>
             <ul>
                 <li><a href="aboutme">About Me</a></li>
@@ -18,7 +18,7 @@
             </ul>
 
         </div>
-        <div class="flexheader">
+        <div>
             <img src="assets/images/IMG_2276.jpeg">
         </div>
 
