--- a/index.html
+++ b/index.html
@@ -53,30 +53,30 @@
 </div>
 <!-- Text for the projects -->
   <div class="card col-l border-info mb-3">
-    <h5 class="card-header">Featured Project</h5>
+    <h5 class="card-header">Ultimate Urban Dictionary</h5>
     <div class="card-body">
       <img class="card-img" src="./assets/images/project1.jpg" alt="Books in a line">
-      <a href="./project1.html" class="btn btn-info float-right button_project_format">Visit Project</a>
+      <a href="https://rwashi690.github.io/Urban_Dictionary_and_Memes/" class="btn btn-info float-right button_project_format">Visit Project</a>
     </div>
   </div>
 
 <div class="row">
     <div class="col-sm-6">
       <div class="card border-info mb-3">
-        <h5 class="card-header">Project 2</h5>
+        <h5 class="card-header">Coding Quiz</h5>
         <div class="card-body">
           <img class="card-img" src="./assets/images/project2.jpg" alt="Window glass panes">
-          <a href="./project2.html" class="btn btn-info float-right button_project_format">Visit Project</a>
+          <a href="https://rwashi690.github.io/Coding-Quiz/" class="btn btn-info float-right button_project_format">Visit Project</a>
         </div>
       </div>
     </div>
 
     <div class="col-sm-6">
       <div class="card border-info mb-3">
-        <h5 class="card-header">Project 3</h5>
+        <h5 class="card-header">Password Generator</h5>
         <div class="card-body">
           <img class="card-img" src="./assets/images/project2.jpg" alt="Window glass panes">
-          <a href="./project3.html" class="btn btn-info float-right button_project_format">Visit Project</a>
+          <a href="https://rwashi690.github.io/JavaScript_Password_Generator/" class="btn btn-info float-right button_project_format">Visit Project</a>
         </div>
       </div>
     </div>
