Added resume and link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </div>
                 <div class="lead row justify-content-center button_format">
                     <a class="btn col mr-2 btn-outline-dark" href="https://github.com/rwashi690" role="button">GitHub</a>
-                    <a class="btn col mr-2  btn-outline-dark" href="./CV.html" role="button">CV</a>
-                    <a class="btn col mr-2  btn-outline-dark" href="./contact.html" role="button">Contact Info</a>
+                    <a class="btn col mr-2  btn-outline-dark" href="./RachWashington_UpdatedCV.pdf" role="button">CV</a>
+                    <a class="btn col mr-2  btn-outline-dark" href="https://www.linkedin.com/in/rachel-washington-913a0045/" role="button">LinkedIn</a>
                 </div>
             </div>
             <div class="col">
